--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -13,3 +13,6 @@ projects:
         region: ap-south-1
         apiId: k3dohaxwnbdfjiwtslwli7mdse
         maxDepth: 2
+extensions:
+  amplify:
+    version: 3
