--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/netinfo": "^9.3.7",
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
+    "@react-navigation/stack": "^6.3.16",
+    "@ui-kitten/components": "^5.3.1",
+    "@ui-kitten/eva-icons": "^5.3.1",
     "amazon-cognito-identity-js": "^6.1.2",
     "aws-amplify": "^5.0.12",
     "react": "18.2.0",
     "react-native": "0.71.2",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0"
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-safe-area-context": "^4.5.2",
+    "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.9.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
