--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-native": "0.71.2",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-image-picker": "^5.3.1",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
