--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@ui-kitten/eva-icons": "^5.3.1",
     "amazon-cognito-identity-js": "^6.1.2",
     "aws-amplify": "^5.0.12",
+    "nanoid": "^4.0.2",
     "react": "18.2.0",
     "react-native": "0.71.2",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-image-picker": "^5.3.1",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
