--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.16",
     "@eva-design/eva": "^2.2.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/netinfo": "^9.3.7",
@@ -21,6 +22,7 @@
     "@ui-kitten/eva-icons": "^5.3.1",
     "amazon-cognito-identity-js": "^6.1.2",
     "aws-amplify": "^5.0.12",
+    "graphql": "^16.7.1",
     "nanoid": "^4.0.2",
     "react": "18.2.0",
     "react-native": "0.71.2",
