--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^6.3.16",
     "amazon-cognito-identity-js": "^6.1.2",
     "aws-amplify": "^5.0.12",
+    "formik": "^2.4.5",
     "graphql": "^16.7.1",
     "nanoid": "^4.0.2",
     "react": "18.2.0",
@@ -28,7 +29,8 @@
     "react-native-image-picker": "^5.3.1",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "yup": "^1.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
