--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^6.3.16",
     "amazon-cognito-identity-js": "^6.3.6",
     "aws-amplify": "^5.0.12",
+    "aws-sdk": "^2.1467.0",
     "formik": "^2.4.5",
     "graphql": "^16.7.1",
     "nanoid": "^4.0.2",
