--- a/package.json
+++ b/package.json
@@ -20,20 +20,24 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "amazon-cognito-identity-js": "^6.3.6",
-    "aws-amplify": "^5.0.12",
     "aws-sdk": "^2.1467.0",
+    "aws4-react-native": "^0.0.2",
     "formik": "^2.4.5",
     "graphql": "^16.7.1",
     "nanoid": "^4.0.2",
+    "querystring-browser": "^1.0.4",
     "react": "18.2.0",
     "react-native": "0.71.2",
+    "react-native-aws-signature": "^0.0.9",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-get-random-values": "^1.8.0",
     "react-native-image-picker": "^5.3.1",
+    "react-native-network-logger": "^1.15.0",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^10.0.0",
     "sharp": "^0.32.1",
+    "url": "^0.11.3",
     "yup": "^1.3.1"
   },
   "devDependencies": {
