--- a/package.json
+++ b/package.json
@@ -1,63 +1,64 @@
 {
-  "name": "doko_react",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.7.16",
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-community/netinfo": "^9.3.7",
-    "@react-navigation/bottom-tabs": "^6.5.7",
-    "@react-navigation/native": "^6.1.4",
-    "@react-navigation/native-stack": "^6.9.10",
-    "@react-navigation/stack": "^6.3.16",
-    "@rneui/base": "^4.0.0-rc.7",
-    "@rneui/themed": "^4.0.0-rc.8",
-    "amazon-cognito-identity-js": "^6.3.6",
-    "aws-sdk": "^2.1467.0",
-    "aws4-react-native": "^0.0.2",
-    "formik": "^2.4.5",
-    "graphql": "^16.7.1",
-    "nanoid": "^4.0.2",
-    "querystring-browser": "^1.0.4",
-    "react": "18.2.0",
-    "react-native": "0.71.2",
-    "react-native-aws-signature": "^0.0.9",
-    "react-native-encrypted-storage": "^4.0.3",
-    "react-native-get-random-values": "^1.8.0",
-    "react-native-image-picker": "^5.3.1",
-    "react-native-network-logger": "^1.15.0",
-    "react-native-safe-area-context": "^4.5.2",
-    "react-native-screens": "^3.20.0",
-    "react-native-vector-icons": "^10.0.0",
-    "sharp": "^0.32.1",
-    "url": "^0.11.3",
-    "yup": "^1.3.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native-community/eslint-config": "^3.2.0",
-    "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^29.2.1",
-    "@types/react": "^18.0.24",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.2.1",
-    "eslint": "^8.19.0",
-    "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.7",
-    "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
-  },
-  "jest": {
-    "preset": "react-native"
-  }
+	"name": "doko_react",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"android": "react-native run-android",
+		"ios": "react-native run-ios",
+		"lint": "eslint .",
+		"start": "react-native start",
+		"test": "jest",
+		"type": "tsc --watch & react-native run-android"
+	},
+	"dependencies": {
+		"@apollo/client": "^3.7.16",
+		"@react-native-async-storage/async-storage": "^1.17.11",
+		"@react-native-community/netinfo": "^9.3.7",
+		"@react-navigation/bottom-tabs": "^6.5.7",
+		"@react-navigation/native": "^6.1.4",
+		"@react-navigation/native-stack": "^6.9.10",
+		"@react-navigation/stack": "^6.3.16",
+		"@rneui/base": "^4.0.0-rc.7",
+		"@rneui/themed": "^4.0.0-rc.8",
+		"amazon-cognito-identity-js": "^6.3.6",
+		"aws-sdk": "^2.1467.0",
+		"aws4-react-native": "^0.0.2",
+		"formik": "^2.4.5",
+		"graphql": "^16.7.1",
+		"nanoid": "^4.0.2",
+		"querystring-browser": "^1.0.4",
+		"react": "18.2.0",
+		"react-native": "0.71.2",
+		"react-native-aws-signature": "^0.0.9",
+		"react-native-encrypted-storage": "^4.0.3",
+		"react-native-get-random-values": "^1.8.0",
+		"react-native-image-picker": "^5.3.1",
+		"react-native-network-logger": "^1.15.0",
+		"react-native-safe-area-context": "^4.5.2",
+		"react-native-screens": "^3.20.0",
+		"react-native-vector-icons": "^10.0.0",
+		"sharp": "^0.32.1",
+		"url": "^0.11.3",
+		"yup": "^1.3.1"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.0",
+		"@babel/preset-env": "^7.20.0",
+		"@babel/runtime": "^7.20.0",
+		"@react-native-community/eslint-config": "^3.2.0",
+		"@tsconfig/react-native": "^2.0.2",
+		"@types/jest": "^29.2.1",
+		"@types/react": "^18.0.24",
+		"@types/react-test-renderer": "^18.0.0",
+		"babel-jest": "^29.2.1",
+		"eslint": "^8.19.0",
+		"jest": "^29.2.1",
+		"metro-react-native-babel-preset": "0.73.7",
+		"prettier": "^2.4.1",
+		"react-test-renderer": "18.2.0",
+		"typescript": "4.8.4"
+	},
+	"jest": {
+		"preset": "react-native"
+	}
 }
