--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react": "18.2.0",
 		"react-native": "0.71.2",
 		"react-native-aws-signature": "^0.0.9",
+		"react-native-date-picker": "^4.3.3",
 		"react-native-encrypted-storage": "^4.0.3",
 		"react-native-get-random-values": "^1.8.0",
 		"react-native-image-picker": "^5.3.1",
@@ -41,6 +42,7 @@
 		"react-redux": "^8.1.3",
 		"sharp": "^0.32.1",
 		"url": "^0.11.3",
+		"use-debounce": "^9.0.4",
 		"yup": "^1.3.1"
 	},
 	"devDependencies": {
