--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"react-native-encrypted-storage": "^4.0.3",
 		"react-native-get-random-values": "^1.8.0",
 		"react-native-image-picker": "^5.3.1",
+		"react-native-keychain": "^8.1.2",
 		"react-native-network-logger": "^1.15.0",
 		"react-native-safe-area-context": "^4.5.2",
 		"react-native-screens": "^3.20.0",
