profile pictuer upload ui

--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
 		"react": "18.2.0",
 		"react-native": "0.71.2",
 		"react-native-aws-signature": "^0.0.9",
+		"react-native-aws3": "^0.0.9",
 		"react-native-date-picker": "^4.3.3",
 		"react-native-encrypted-storage": "^4.0.3",
 		"react-native-get-random-values": "^1.8.0",
-		"react-native-image-picker": "^5.3.1",
+		"react-native-image-picker": "^5.7.0",
 		"react-native-keychain": "^8.1.2",
+		"react-native-modal": "^13.0.1",
 		"react-native-network-logger": "^1.15.0",
 		"react-native-safe-area-context": "^4.5.2",
 		"react-native-screens": "^3.20.0",
