--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
     "amplify/backend/amplify-meta.json": true,
     "amplify/backend/awscloudformation": true
   },
-  "java.compile.nullAnalysis.mode": "disabled"
+"java.compile.nullAnalysis.mode": "disabled",
+"java.configuration.updateBuildConfiguration": "interactive"
 }
