updatedclient id and java sdk path in gradle.prop

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -44,4 +44,4 @@ newArchEnabled=false
 hermesEnabled=true
 
 
-org.gradle.java.home=C:/Program Files/Android/Android Studio/jre
+# org.gradle.java.home=C:/Program Files/Android/Android Studio/jre
