--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
     sdk: flutter
   provider:
   shared_preferences: ^2.3.0
+  amplify_flutter: ^2.3.0
+  amplify_auth_cognito: ^2.3.0
+  amplify_authenticator: ^2.1.1
 
   cupertino_icons: ^1.0.6
 
