--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,6 @@ dependencies:
   shared_preferences: ^2.3.0
   amplify_flutter: ^2.3.0
   amplify_auth_cognito: ^2.3.0
-  amplify_authenticator: ^2.1.1
 
   cupertino_icons: ^1.0.6
 
@@ -72,6 +71,44 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: Rubik
+      fonts:
+        - asset: fonts/Rubik-Regular.ttf
+          weight: 400
+        - asset: fonts/Rubik-Italic.ttf
+          style: italic
+          weight: 400
+        - asset: fonts/Rubik-Light.ttf
+          weight: 300
+        - asset: fonts/Rubik-LightItalic.ttf
+          style: italic
+          weight: 300
+        - asset: fonts/Rubik-Medium.ttf
+          weight: 500
+        - asset: fonts/Rubik-MediumItalic.ttf
+          style: italic
+          weight: 500
+        - asset: fonts/Rubik-SemiBold.ttf
+          weight: 600
+        - asset: fonts/Rubik-SemiBoldItalic.ttf
+          style: italic
+          weight: 600
+        - asset: fonts/Rubik-Bold.ttf
+          weight: 700
+        - asset: fonts/Rubik-BoldItalic.ttf
+          style: italic
+          weight: 700
+        - asset: fonts/Rubik-ExtraBold.ttf
+          weight: 800
+        - asset: fonts/Rubik-ExtraBoldItalic.ttf
+          style: italic
+          weight: 800
+        - asset: fonts/Rubik-Black.ttf
+          weight: 900
+        - asset: fonts/Rubik-BlackItalic.ttf
+          style: italic
+          weight: 900
 
 flutter_launcher_icons:
   android: "launcher_icon"
@@ -80,13 +117,13 @@ flutter_launcher_icons:
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path:  "assets/logo.png"
+    image_path: "assets/logo.png"
     background_color: "#hexcode"
     theme_color: "#hexcode"
   windows:
     generate: true
-    image_path:  "assets/logo.png"
+    image_path: "assets/logo.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path:  "assets/logo.png"
+    image_path: "assets/logo.png"
