--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   shared_preferences: ^2.3.0
   amplify_flutter: ^2.3.0
   amplify_auth_cognito: ^2.3.0
+  url_launcher: ^6.3.0
+  qr_flutter: ^4.1.0
 
   cupertino_icons: ^1.0.6
 
@@ -44,6 +46,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo.svg
+    - assets/logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
