--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   go_router: ^14.2.6
   graphql_flutter: ^5.1.2
+  flex_color_picker: ^3.5.1
 
 dev_dependencies:
   flutter_test:
