--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -7,5 +7,39 @@
       "service": "Cognito",
       "serviceType": "imported"
     }
+  },
+  "parameters": {
+    "AMPLIFY_auth_dokoreact_nativeClientId": {
+      "usedBy": [
+        {
+          "category": "auth",
+          "resourceName": "dokoreact"
+        }
+      ]
+    },
+    "AMPLIFY_auth_dokoreact_userPoolId": {
+      "usedBy": [
+        {
+          "category": "auth",
+          "resourceName": "dokoreact"
+        }
+      ]
+    },
+    "AMPLIFY_auth_dokoreact_userPoolName": {
+      "usedBy": [
+        {
+          "category": "auth",
+          "resourceName": "dokoreact"
+        }
+      ]
+    },
+    "AMPLIFY_auth_dokoreact_webClientId": {
+      "usedBy": [
+        {
+          "category": "auth",
+          "resourceName": "dokoreact"
+        }
+      ]
+    }
   }
 }
