--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "dokoreact": {
+    "dokoreact20865141": {
       "customAuth": false,
       "dependsOn": [],
       "providerPlugin": "awscloudformation",
@@ -9,37 +9,117 @@
     }
   },
   "parameters": {
-    "AMPLIFY_auth_dokoreact_nativeClientId": {
+    "AMPLIFY_auth_dokoreact20865141_allowUnauthenticatedIdentities": {
       "usedBy": [
         {
           "category": "auth",
-          "resourceName": "dokoreact"
+          "resourceName": "dokoreact20865141"
         }
       ]
     },
-    "AMPLIFY_auth_dokoreact_userPoolId": {
+    "AMPLIFY_auth_dokoreact20865141_authRoleArn": {
       "usedBy": [
         {
           "category": "auth",
-          "resourceName": "dokoreact"
+          "resourceName": "dokoreact20865141"
         }
       ]
     },
-    "AMPLIFY_auth_dokoreact_userPoolName": {
+    "AMPLIFY_auth_dokoreact20865141_authRoleName": {
       "usedBy": [
         {
           "category": "auth",
-          "resourceName": "dokoreact"
+          "resourceName": "dokoreact20865141"
         }
       ]
     },
-    "AMPLIFY_auth_dokoreact_webClientId": {
+    "AMPLIFY_auth_dokoreact20865141_identityPoolId": {
       "usedBy": [
         {
           "category": "auth",
-          "resourceName": "dokoreact"
+          "resourceName": "dokoreact20865141"
         }
       ]
+    },
+    "AMPLIFY_auth_dokoreact20865141_identityPoolName": {
+      "usedBy": [
+        {
+          "category": "auth",
+          "resourceName": "dokoreact20865141"
+        }
+      ]
+    },
+    "AMPLIFY_auth_dokoreact20865141_nativeClientId": {
+      "usedBy": [
+        {
+          "category": "auth",
+          "resourceName": "dokoreact20865141"
+        }
+      ]
+    },
+    "AMPLIFY_auth_dokoreact20865141_unauthRoleArn": {
+      "usedBy": [
+        {
+          "category": "auth",
+          "resourceName": "dokoreact20865141"
+        }
+      ]
+    },
+    "AMPLIFY_auth_dokoreact20865141_unauthRoleName": {
+      "usedBy": [
+        {
+          "category": "auth",
+          "resourceName": "dokoreact20865141"
+        }
+      ]
+    },
+    "AMPLIFY_auth_dokoreact20865141_userPoolId": {
+      "usedBy": [
+        {
+          "category": "auth",
+          "resourceName": "dokoreact20865141"
+        }
+      ]
+    },
+    "AMPLIFY_auth_dokoreact20865141_userPoolName": {
+      "usedBy": [
+        {
+          "category": "auth",
+          "resourceName": "dokoreact20865141"
+        }
+      ]
+    },
+    "AMPLIFY_auth_dokoreact20865141_webClientId": {
+      "usedBy": [
+        {
+          "category": "auth",
+          "resourceName": "dokoreact20865141"
+        }
+      ]
+    },
+    "AMPLIFY_storage_dokoreactd2e14c2a_bucketName": {
+      "usedBy": [
+        {
+          "category": "storage",
+          "resourceName": "dokoreactd2e14c2a"
+        }
+      ]
+    },
+    "AMPLIFY_storage_dokoreactd2e14c2a_region": {
+      "usedBy": [
+        {
+          "category": "storage",
+          "resourceName": "dokoreactd2e14c2a"
+        }
+      ]
+    }
+  },
+  "storage": {
+    "dokoreactd2e14c2a": {
+      "dependsOn": [],
+      "providerPlugin": "awscloudformation",
+      "service": "S3",
+      "serviceType": "imported"
     }
   }
 }
