--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   shared_preferences: ^2.3.0
   amplify_flutter: ^2.3.0
   amplify_auth_cognito: ^2.3.0
+  amplify_storage_s3: ^2.4.0
   url_launcher: ^6.3.0
   qr_flutter: ^4.1.0
 
