--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>Doki needs access to your photo library to pick images.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Doki needs access to your camera to capture new images.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Doki needs access to your microphone to record videos.</string>
 </dict>
 </plist>
