--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flex_color_picker: ^3.5.1
   image_picker: ^1.1.2
   aws_common: ^0.7.3
+  cached_network_image: 3.4.0
 
 dev_dependencies:
   flutter_test:
