--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   image_picker: ^1.1.2
   aws_common: ^0.7.3
   cached_network_image: 3.4.0
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
