--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,12 @@ dependencies:
   aws_common: ^0.7.3
   cached_network_image: 3.4.0
   hive: ^2.2.3
+  video_compress: ^3.1.3
+  image_picker_platform_interface: ^2.10.0
+  media_kit: ^1.1.11 # Primary package.
+  media_kit_video: ^1.2.5 # For video rendering.
+  media_kit_libs_video: ^1.0.5 # Native video dependencies.
+  flutter_cache_manager: ^3.4.1
 
 dev_dependencies:
   flutter_test:
