--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   media_kit_libs_video: ^1.0.5 # Native video dependencies.
   flutter_cache_manager: ^3.4.1
   image_picker_android: ^0.8.12+15
+  visibility_detector: ^0.4.0+2
 
 dev_dependencies:
   flutter_test:
