--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   visibility_detector: ^0.4.0+2
   path_provider: ^2.1.4
   image_cropper: ^8.0.2
+  smooth_page_indicator: ^1.2.0+3
 
 dev_dependencies:
   flutter_test:
