--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   path_provider: ^2.1.4
   image_cropper: ^8.0.2
   smooth_page_indicator: ^1.2.0+3
+  image: ^4.3.0
 
 dev_dependencies:
   flutter_test:
