--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image_cropper: ^8.0.2
   smooth_page_indicator: ^1.2.0+3
   image: ^4.3.0
+  giphy_get: ^3.5.6
 
 dev_dependencies:
   flutter_test:
