feat: added core use_cases and result

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   image: ^4.3.0
   giphy_get: ^3.5.6
 
+  # clean architecture dependencies
+  equatable: ^2.0.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
