feat: added authentication feature entity, repository and input

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
 
   # clean architecture dependencies
   equatable: ^2.0.5
+  password_strength: ^0.2.0
 
 dev_dependencies:
   flutter_test:
