--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   # clean architecture dependencies
   equatable: ^2.0.5
   password_strength: ^0.2.0
+  flutter_bloc: ^8.1.6
+  fpdart: ^1.1.1
+  get_it: ^8.0.2
+  hydrated_bloc: ^9.1.5
 
 dev_dependencies:
   flutter_test:
