feat: completed unauthenticated user actions in feature authentication

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,9 @@ dependencies:
   equatable: ^2.0.5
   password_strength: ^0.2.0
   flutter_bloc: ^8.1.6
-  fpdart: ^1.1.1
   get_it: ^8.0.2
   hydrated_bloc: ^9.1.5
+  meta: ^1.15.0
 
 dev_dependencies:
   flutter_test:
