--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   shared_preferences: ^2.3.0
   amplify_flutter: ^2.3.0
   amplify_auth_cognito: ^2.3.0
-  amplify_storage_s3: ^2.4.0
+  amplify_storage_s3: ^2.5.1
   url_launcher: ^6.3.0
   qr_flutter: ^4.1.0
 
@@ -49,6 +49,7 @@ dependencies:
   hydrated_bloc: ^9.1.5
   meta: ^1.15.0
   rxdart: ^0.28.0
+  share_plus: ^10.0.0
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +60,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
-  flutter_launcher_icons: ^0.13.1
+  flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.2
   mocktail: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
