--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   aws_common: ^0.7.3
   cached_network_image: 3.4.0
   hive: ^2.2.3
+  hive_flutter: ^1.1.0
   video_compress: ^3.1.3
   image_picker_platform_interface: ^2.10.0
   media_kit: ^1.1.11 # Primary package.
