--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   hydrated_bloc: ^9.1.5
   meta: ^1.15.0
   rxdart: ^0.28.0
+  characters: ^1.3.0
   share_plus: ^10.0.0
 
 dev_dependencies:
