--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   characters: ^1.3.0
   share_plus: ^10.0.0
   flutter_dotenv: ^5.2.1
+  doki_websocket_client:
+    git:
+      url: https://github.com/rohan031/doki_websocket_client.git
 
 dev_dependencies:
   flutter_test:
