--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   internet_connection_checker: ^3.0.1
   nice_overlay: ^1.0.1
   lottie: ^3.3.1
+  vibration: ^3.1.1
 
 dev_dependencies:
   flutter_test:
