--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -21,6 +21,97 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
+    prefer_const_constructors_in_immutables: true
+    prefer_const_constructors: true
+    annotate_overrides: true
+    avoid_empty_else: true
+    avoid_function_literals_in_foreach_calls: true
+    avoid_init_to_null: true
+    avoid_print: true
+    avoid_relative_lib_imports: true
+    avoid_renaming_method_parameters: true
+    avoid_return_types_on_setters: true
+    avoid_returning_null_for_void: true
+    avoid_shadowing_type_parameters: true
+    avoid_single_cascade_in_expression_statements: true
+    avoid_types_as_parameter_names: true
+    avoid_unnecessary_containers: true
+    avoid_web_libraries_in_flutter: true
+    await_only_futures: true
+    camel_case_extensions: true
+    camel_case_types: true
+    collection_methods_unrelated_type: true
+    control_flow_in_finally: true
+    curly_braces_in_flow_control_structures: true
+    dangling_library_doc_comments: true
+    depend_on_referenced_packages: true
+    empty_catches: true
+    empty_constructor_bodies: true
+    empty_statements: true
+    exhaustive_cases: true
+    file_names: true
+    hash_and_equals: true
+    implementation_imports: true
+    implicit_call_tearoffs: true
+    library_annotations: true
+    library_prefixes: true
+    library_private_types_in_public_api: true
+    no_duplicate_case_values: true
+    no_leading_underscores_for_library_prefixes: true
+    no_leading_underscores_for_local_identifiers: true
+    no_logic_in_create_state: true
+    no_wildcard_variable_uses: true
+    non_constant_identifier_names: true
+    null_check_on_nullable_type_parameter: true
+    null_closures: true
+    package_names: true
+    prefer_adjacent_string_concatenation: true
+    prefer_conditional_assignment: true
+    prefer_contains: true
+    prefer_final_fields: true
+    prefer_generic_function_type_aliases: true
+    prefer_for_elements_to_map_fromIterable: true
+    prefer_function_declarations_over_variables: true
+    prefer_if_null_operators: true
+    prefer_initializing_formals: true
+    prefer_inlined_adds: true
+    prefer_interpolation_to_compose_strings: true
+    prefer_is_empty: true
+    prefer_is_not_empty: true
+    prefer_is_not_operator: true
+    prefer_iterable_whereType: true
+    prefer_null_aware_operators: true
+    prefer_spread_collections: true
+    prefer_typing_uninitialized_variables: true
+    recursive_getters: true
+    secure_pubspec_urls: true
+    sized_box_for_whitespace: true
+    slash_for_doc_comments: true
+    sort_child_properties_last: true
+    type_init_formals: true
+    unnecessary_brace_in_string_interps: true
+    unnecessary_const: true
+    unnecessary_constructor_name: true
+    unnecessary_getters_setters: true
+    unnecessary_late: true
+    unnecessary_new: true
+    unnecessary_null_aware_assignments: true
+    unnecessary_null_in_if_null_operators: true
+    unnecessary_nullable_for_final_variable_declarations: true
+    unnecessary_overrides: true
+    unnecessary_string_escapes: true
+    unnecessary_string_interpolations: true
+    unnecessary_this: true
+    unnecessary_to_list_in_spreads: true
+    unrelated_type_equality_checks: true
+    use_build_context_synchronously: true
+    use_full_hex_values_for_flutter_colors: true
+    use_function_type_syntax_for_parameters: true
+    use_key_in_widget_constructors: true
+    use_rethrow_when_possible: true
+    use_string_in_part_of_directives: true
+    valid_regexps: true
+    void_checks: true
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
