--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,6 +92,7 @@ flutter:
     - assets/media-animation.lottie
     - assets/like-animation.lottie
     - assets/typing-animation.lottie
+    - assets/typing-animation-sticker.lottie
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
