--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   nice_overlay: ^1.0.1
   lottie: ^3.3.1
   scrollview_observer: ^1.25.1
+  flutter_markdown: ^0.7.6+2
 
 dev_dependencies:
   flutter_test:
