--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   lottie: ^3.3.1
   scrollview_observer: ^1.25.1
   flutter_markdown: ^0.7.6+2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
