--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,9 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.4.3 <4.0.0'
 
+dependency_overrides:
+  web_socket_channel: ^3.0.2
+
 dependencies:
   flutter:
     sdk: flutter
@@ -61,6 +64,8 @@ dependencies:
   scrollview_observer: ^1.25.1
   flutter_markdown: ^0.7.6+2
   intl: ^0.19.0
+  amplify_api: ^2.6.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
