--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   intl: ^0.19.0
   amplify_api: ^2.6.0
   uuid: ^4.5.1
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
