--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,13 +96,14 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/logo.svg
-    - assets/logo.png
+    - assets/
+#    - assets/logo.svg
+#    - assets/logo.png
     - .env
-    - assets/media-animation.lottie
-    - assets/like-animation.lottie
-    - assets/typing-animation.lottie
-    - assets/typing-animation-sticker.lottie
+#    - assets/media-animation.lottie
+#    - assets/like-animation.lottie
+#    - assets/typing-animation.lottie
+#    - assets/typing-animation-sticker.lottie
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
