feat: used gal to save captured media to devices for better stability

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -52,6 +52,8 @@
     <key>NSMicrophoneUsageDescription</key>
     <string>Doki needs access to your microphone to record videos.</string>
 
+    <key>NSPhotoLibraryAddUsageDescription</key>
+
     <key>NSAppTransportSecurity</key>
     <dict>
       <key>NSAllowsArbitraryLoads</key>
