--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   uuid: ^4.5.1
   auto_size_text: ^3.0.0
   liquid_pull_to_refresh: ^3.0.1
+  gal: ^2.3.1
 
 dev_dependencies:
   flutter_test:
