--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,8 +70,9 @@ dependencies:
   auto_size_text: ^3.0.0
   liquid_pull_to_refresh: ^3.0.1
   gal: ^2.3.1
-  google_mlkit_face_detection: ^0.12.0
+#  google_mlkit_face_detection: ^0.12.0
   http: ^1.3.0
+  swipe_callback: ^1.0.0
 
 dev_dependencies:
   flutter_test:
