--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   cached_network_image: 3.4.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  video_compress: ^3.1.3
+#  video_compress: ^3.1.3
   image_picker_platform_interface: ^2.10.0
   media_kit: ^1.1.11 # Primary package.
   media_kit_video: ^1.2.5 # For video rendering.
@@ -70,9 +70,10 @@ dependencies:
   auto_size_text: ^3.0.0
   liquid_pull_to_refresh: ^3.0.1
   gal: ^2.3.1
-#  google_mlkit_face_detection: ^0.12.0
   http: ^1.3.0
   swipe_callback: ^1.0.0
+  easy_video_editor: ^0.0.3
+  media_data_extractor: ^0.0.6
 
 dev_dependencies:
   flutter_test:
