--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   http: ^1.3.0
   swipe_callback: ^1.0.0
   easy_video_editor: ^0.0.3
+  flutter_image_filters: ^0.0.25
 
 dev_dependencies:
   flutter_test:
